--- a/core-services/prow/02_config/_labels.yaml
+++ b/core-services/prow/02_config/_labels.yaml
@@ -481,6 +481,11 @@ repos:
       - color: 00D8FF
         description: Related to git-service
         name: component/git-service
+  openshift/knative-serving:
+    labels:
+      - color: 00D8FF
+        description: Issues or PRs related to test and release
+        name: area/test-and-release
         target: both
         addedBy: label
   cri-o:
