Add openshift-kni/baremetal-deploy repo to prow plugins config
Signed-off-by: Johnny Bieren <jbieren@redhat.com>

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1525,6 +1525,10 @@ plugins:
   - owners-label
   - wip
   - yuks
+  openshift-kni/baremetal-deploy:
+  - lgtm
+  - shrug
+  - trigger
   openshift-s2i/s2i-wildfly:
   - approve
   - blunderbuss
