--- a/ci-operator/config/openshift/machine-config-operator/openshift-machine-config-operator-fcos.yaml
+++ b/ci-operator/config/openshift/machine-config-operator/openshift-machine-config-operator-fcos.yaml
@@ -61,6 +61,10 @@ tests:
     TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_installer:
     cluster_profile: aws
+- as: e2e-vsphere
+  commands: TEST_SUITE=openshift/conformance/parallel run-tests
+  openshift_installer_upi:
+    cluster_profile: vsphere
 - as: verify
   commands: |
     make verify
