Enabling go mod during client go tests.
Repository openshift/client-go uses go mod now. This patch adds
GO111MODULE environment variable during tests.

--- a/ci-operator/jobs/openshift/client-go/openshift-client-go-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/client-go/openshift-client-go-master-presubmits.yaml
@@ -27,6 +27,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: GO111MODULE
+          value: on
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
