--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -1,5 +1,17 @@
 secrets:
 - from:
+    namespace: ibm-gate-secrets
+    name: ibm-gate-test-secrets
+  to:
+    namespace: ci-stg
+    name: ibm-gate-test-secrets
+- from:
+    namespace: ibm-gate-secrets
+    name: registry-default-secret
+  to:
+    namespace: ci-stg
+    name: registry-default-secret
+- from:
     namespace: ci
     name: gce-sa-credentials-gcs-publisher
   to:
