--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -48,17 +48,22 @@ presubmits:
             source /etc/profile.d/gimme.sh
             go env
 
-            export DOCKER_PREFIX='https://api.ci.openshift.org/kubevirt/kubevirt'
-            export DOCKER_TAG='os-ci-devel'
+            export DOCKER_PREFIX='https://registry.svc.ci.openshift.org/kubevirt/kubevirt'
+            export DOCKER_TAG="$( echo "${JOB_NAME}-${BUILD_ID}" | md5sum -t | cut -c 1-8 )"
             export KUBEVIRT_PROVIDER=external
 
-            # create manifests
+            echo "creating manifests"
             bash -x ./hack/build-manifests.sh
 
-            # deploy
+            echo "fetching oc and kubectl for deployment"
+            wget https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
+            tar zxvf openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
+            ( cd openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit && mv kubectl oc .. )
+
+            echo "deploying"
             bash -x ./hack/cluster-deploy.sh
 
-            # functest
+            echo "testing"
             bash -x ./hack/functests.sh
         image: ci-operator:latest
         imagePullPolicy: Always
