Minimal configuration for openshift-priv
- branch protection: disabled org-wide, not necessary
- deck: no changes necessary
- plank: add org-wide decoration config defaults
- plugins: like openshift without `bugzilla` and `OWNERS` plugins
- tide: no changes necessary for org settings?

In addition, GH-syncing periodics were updated to handle
`openshift-priv`, mostly to populate the org with necessary labels.

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -117,6 +117,7 @@ periodics:
         -label:needs-rebase
         -label:needs-ok-to-test
         org:openshift
+        org:openshift-priv
         repo:operator-framework/operator-sdk
         repo:tnozicka/openshift-acme
       - --token=/etc/oauth/oauth
@@ -304,7 +305,7 @@ periodics:
     - args:
       - --config=/etc/config/labels.yaml
       - --confirm=true
-      - --orgs=openshift,cri-o,operator-framework
+      - --orgs=openshift,cri-o,operator-framework,openshift-priv
       - --token=/etc/github/oauth
       - --endpoint=http://ghproxy
       - --graphql-endpoint=http://ghproxy/graphql
