--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -27,6 +27,7 @@ approve:
 - lgtm_acts_as_approve: true
   repos:
   - openshift
+  - openshift-priv
   require_self_approval: false
 - ignore_review_state: true
   repos:
@@ -952,6 +953,21 @@ external_plugins:
     - issue_comment
     - pull_request
     name: needs-rebase
+  openshift-priv:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://cherrypick
+    events:
+    - issue_comment
+    - pull_request
+    name: cherrypick
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   openshift-s2i:
   - endpoint: http://needs-rebase
     events:
@@ -1524,6 +1540,32 @@ plugins:
   - lgtm
   - shrug
   - trigger
+  openshift-priv:
+  - assign
+  - blockade
+  - blunderbuss
+  - cat
+  - dog
+  - heart
+  - golint
+  - goose
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - override
+  - owners-label
+  - pony
+  - retitle
+  - shrug
+  - sigmention
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - wip
+  - yuks
   openshift-s2i/s2i-wildfly:
   - approve
   - blunderbuss
