--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -194,6 +194,8 @@ branch-protection:
               protect: false
             release-next-ci:
               protect: false
+    openshift-priv:
+      protect: false
     openshift-s2i:
       repos:
         s2i-wildfly:
@@ -334,6 +336,12 @@ plank:
         entrypoint: gcr.io/k8s-prow/entrypoint:v20191205-eb64dfdaf
         initupload: gcr.io/k8s-prow/initupload:v20191205-a2dba6b81
         sidecar: gcr.io/k8s-prow/sidecar:v20191205-a2dba6b81
+    openshift-priv:
+      gcs_configuration:
+        bucket: origin-ci-private
+        mediaTypes:
+          log: text/plain
+      gcs_credentials_secret: gce-sa-credentials-gcs-private
     openshift/private-ci-testing:
       gcs_configuration:
         bucket: origin-ci-private
