--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -55,6 +55,9 @@ presubmits:
             echo "creating manifests"
             bash -x ./hack/build-manifests.sh
 
+            echo "installing wget"
+            dnf install -y wget
+
             echo "fetching oc and kubectl for deployment"
             wget https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
             tar zxvf openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
