--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -51,7 +51,7 @@ tests:
     bash -x ./hack/build-manifests.sh
 
     echo "installing wget"
-    dnf install -y wget
+    sudo dnf install -y wget
 
     echo "fetching oc and kubectl for deployment"
     wget https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
