--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -63,6 +63,7 @@ periodics:
         org:openshift
         repo:operator-framework/operator-sdk
         repo:tnozicka/openshift-acme
+        -repo:openshift/machine-config-operator
       - --token=/etc/oauth/oauth
       - --updated=0
       - |-
