--- a/core-services/image-mirroring/openshift/Makefile
+++ b/core-services/image-mirroring/openshift/Makefile
@@ -8,5 +8,7 @@ image-restore-from-mirror:
 image-mirror-files:
 	BASE=quay.io/openshift/origin- VERSION=4.1 TAG=4.1,4.1.0 ../../../hack/mirror-file > mapping_origin_4_1
 	BASE=quay.io/openshift/origin- VERSION=4.2 TAG=4.2,4.2.0 ../../../hack/mirror-file > mapping_origin_4_2
-	BASE=quay.io/openshift/origin- VERSION=4.3 TAG=4.3,4.3.0,latest ../../../hack/mirror-file > mapping_origin_4_3
+	BASE=quay.io/openshift/origin- VERSION=4.3 TAG=4.3,4.3.0 ../../../hack/mirror-file > mapping_origin_4_3
+	BASE=quay.io/openshift/origin- VERSION=4.4 TAG=4.4,4.4.0,latest ../../../hack/mirror-file > mapping_origin_4_4
+	BASE=quay.io/openshift/origin- VERSION=4.5 TAG=4.5,4.5.0 ../../../hack/mirror-file > mapping_origin_4_5
 .PHONY: image-mirror-files
