--- a/cluster/ci/config/prow/openshift/ci-operator/roles.yaml
+++ b/cluster/ci/config/prow/openshift/ci-operator/roles.yaml
@@ -112,6 +112,74 @@ items:
   apiVersion: rbac.authorization.k8s.io/v1
   metadata:
     name: image-tagger
+    namespace: ocp-s390x
+  rules:
+  - apiGroups:
+    - ""
+    - image.openshift.io
+    attributeRestrictions: null
+    resources:
+    - imagestreamtags
+    - imagestreams
+    - imagestreamimports
+    verbs:
+    - update
+    - patch
+    - get
+    - create
+
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: image-tagger-ci-operator
+    namespace: ocp-s390x
+  roleRef:
+    kind: Role
+    name: image-tagger
+    namespace: ocp-s390x
+  subjects:
+  - kind: ServiceAccount
+    name: ci-operator
+    namespace: ci
+
+- kind: Role
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: image-tagger
+    namespace: ocp-ppc64le
+  rules:
+  - apiGroups:
+    - ""
+    - image.openshift.io
+    attributeRestrictions: null
+    resources:
+    - imagestreamtags
+    - imagestreams
+    - imagestreamimports
+    verbs:
+    - update
+    - patch
+    - get
+    - create
+
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: image-tagger-ci-operator
+    namespace: ocp-ppc64le
+  roleRef:
+    kind: Role
+    name: image-tagger
+    namespace: ocp-ppc64le
+  subjects:
+  - kind: ServiceAccount
+    name: ci-operator
+    namespace: ci
+
+- kind: Role
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: image-tagger
     namespace: origin
   rules:
   - apiGroups:
