template: Use a more correct kill command
Avoids errors like

```
error: 51 fail, 36 pass, 129 skip (1h11m20s)
kill: usage: kill [-s sigspec | -n signum | -sigspec] pid | jobspec ... or kill -l [sigspec]
```

--- a/ci-operator/templates/master-sidecar-3.yaml
+++ b/ci-operator/templates/master-sidecar-3.yaml
@@ -66,7 +66,7 @@ objects:
         set -euo pipefail
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'kill $(jobs -p); exit 0' TERM
+        trap 'jobs -p | xargs -r kill; exit 0' TERM
 
         # wait until the master job creates admin.kubeconfig
         while true; do
@@ -104,7 +104,7 @@ objects:
           echo "Gathering artifacts ..."
         }
         trap 'teardown' EXIT
-        trap 'kill $(jobs -p); exit 0' TERM
+        trap 'jobs -p | xargs -r kill; exit 0' TERM
 
         (
           while true; do
