--- a/cluster/ci/config/service-ca.yaml
+++ b/cluster/ci/config/service-ca.yaml
@@ -37,7 +37,7 @@ spec:
           # set by the node image
           unset KUBECONFIG
 
-          trap 'kill $(jobs -p); exit 0' TERM
+          trap 'jobs -p | xargs -r kill; exit 0' TERM
           while true; do
             mkdir -p /etc/docker/certs.d/docker-registry.default.svc:5000/
             cp /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt /etc/docker/certs.d/docker-registry.default.svc:5000/
