--- a/projects/gc-daemonset/daemonset.yaml
+++ b/projects/gc-daemonset/daemonset.yaml
@@ -20,7 +20,7 @@ spec:
           #!/bin/bash
           set -euo pipefail
 
-          trap 'kill $(jobs -p); exit 0' TERM
+          trap 'jobs -p | xargs -r kill; exit 0' TERM
           while true; do
             sleep 600 &
             wait $!
@@ -38,7 +38,7 @@ spec:
           #!/bin/bash
           set -euo pipefail
 
-          trap 'kill $(jobs -p); exit 0' TERM
+          trap 'jobs -p | xargs -r kill; exit 0' TERM
           while true; do
             sleep 600 &
             wait $!
@@ -56,7 +56,7 @@ spec:
           #!/bin/bash
           set -euo pipefail
 
-          trap 'kill $(jobs -p); exit 0' TERM
+          trap 'jobs -p | xargs -r kill; exit 0' TERM
           while true; do
             sleep 600 &
             wait $!
@@ -74,7 +74,7 @@ spec:
           #!/bin/bash
           set -euo pipefail
 
-          trap 'kill $(jobs -p); exit 0' TERM
+          trap 'jobs -p | xargs -r kill; exit 0' TERM
           while true; do
             sleep 600 &
             wait $!
@@ -92,7 +92,7 @@ spec:
           #!/bin/bash
           set -euo pipefail
 
-          trap 'kill $(jobs -p); exit 0' TERM
+          trap 'jobs -p | xargs -r kill; exit 0' TERM
           while true; do
             sleep 600 &
             wait $!
@@ -110,7 +110,7 @@ spec:
           #!/bin/bash
           set -euo pipefail
 
-          trap 'kill $(jobs -p); exit 0' TERM
+          trap 'jobs -p | xargs -r kill; exit 0' TERM
           while true; do
             sleep 600 &
             wait $!
@@ -128,7 +128,7 @@ spec:
           #!/bin/bash
           set -euo pipefail
 
-          trap 'kill $(jobs -p); exit 0' TERM
+          trap 'jobs -p | xargs -r kill; exit 0' TERM
           while true; do
             sleep 600 &
             wait $!
