--- a/ci-operator/templates/master-sidecar-4.2.yaml
+++ b/ci-operator/templates/master-sidecar-4.2.yaml
@@ -122,7 +122,7 @@ objects:
         set -euo pipefail
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'jobs -p | xargs kill || true; exit 0' TERM
+        trap 'jobs -p | xargs -r kill; exit 0' TERM
 
         # wait until the master job creates admin.kubeconfig
         while true; do
