--- a/ci-operator/templates/openshift/endurance/endurance-test.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-test.yaml
@@ -110,7 +110,7 @@ objects:
         export PATH=/usr/libexec/origin:$PATH
 
         trap 'touch /tmp/done' EXIT
-        trap 'kill $(jobs -p); exit 0' TERM
+        trap 'jobs -p | xargs -r kill; exit 0' TERM
 
         mkdir -p "${HOME}"
 
