--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml
@@ -269,7 +269,7 @@ objects:
         export PATH=/tmp/shared:$PATH
 
         trap 'touch /tmp/shared/exit' EXIT
-        trap 'kill $(jobs -p); exit 0' TERM
+        trap 'jobs -p | xargs -r kill; exit 0' TERM
 
         mkdir -p "${HOME}"
 
@@ -1310,7 +1310,7 @@ objects:
         }
 
         trap 'teardown' EXIT
-        trap 'kill $(jobs -p); exit 0' TERM
+        trap 'jobs -p | xargs -r kill; exit 0' TERM
 
         for i in $(seq 1 220); do
           if [[ -f /tmp/shared/exit ]]; then
