--- a/core-services/ci-rpms/artifacts-rpms.yaml
+++ b/core-services/ci-rpms/artifacts-rpms.yaml
@@ -84,7 +84,7 @@ items:
           - |
             #!/bin/bash
             set -euo pipefail
-            trap 'kill $(jobs -p); exit 0' TERM
+            trap 'jobs -p | xargs -r kill; exit 0' TERM
 
             while true; do
               cat <<END >/tmp/openshift.repo
