--- a/ci-operator/jobs/openshift/machine-api-operator/openshift-machine-api-operator-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/machine-api-operator/openshift-machine-api-operator-release-4.3-presubmits.yaml
@@ -357,6 +357,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-machine-api-operator-release-4.3-e2e-azure
+    optional: true
     rerun_command: /test e2e-azure
     spec:
       containers:
@@ -499,6 +500,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-machine-api-operator-release-4.3-e2e-gcp
+    optional: true
     rerun_command: /test e2e-gcp
     spec:
       containers:
@@ -571,6 +573,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-machine-api-operator-release-4.3-e2e-gcp-operator
+    optional: true
     rerun_command: /test e2e-gcp-operator
     spec:
       containers:
